// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> SNAPSHOTS: UI - Button (Loaded: true) component - render 1`] = `
<button
  className="sc-dkjKgF fywBev"
  onClick={[Function]}
  variant="primary"
>
  <div
    className="sc-bcPKhP haSZKe"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-spinner "
      data-icon="spinner"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M304 48c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zm0 416c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zM48 304c26.5 0 48-21.5 48-48s-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48zm464-48c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zM142.9 437c18.7-18.7 18.7-49.1 0-67.9s-49.1-18.7-67.9 0s-18.7 49.1 0 67.9s49.1 18.7 67.9 0zm0-294.2c18.7-18.7 18.7-49.1 0-67.9S93.7 56.2 75 75s-18.7 49.1 0 67.9s49.1 18.7 67.9 0zM369.1 437c18.7 18.7 49.1 18.7 67.9 0s18.7-49.1 0-67.9s-49.1-18.7-67.9 0s-18.7 49.1 0 67.9z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (btnType - close) component - render 1`] = `
<button
  className="sc-grXZZQ hgKUPA"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-xmark fa-sm "
    data-icon="xmark"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</button>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (btnType - primary) component - render 1`] = `
<button
  className="sc-dkjKgF fywBev"
  onClick={[Function]}
  variant="primary"
/>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (variant - danger) component - render 1`] = `
<button
  className="sc-dkjKgF dRaTpt"
  onClick={[Function]}
  variant="danger"
/>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (variant - primary) component - render 1`] = `
<button
  className="sc-dkjKgF fywBev"
  onClick={[Function]}
  variant="primary"
>
  <div
    className="sc-bcPKhP haSZKe"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-spinner "
      data-icon="spinner"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M304 48c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zm0 416c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zM48 304c26.5 0 48-21.5 48-48s-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48zm464-48c0-26.5-21.5-48-48-48s-48 21.5-48 48s21.5 48 48 48s48-21.5 48-48zM142.9 437c18.7-18.7 18.7-49.1 0-67.9s-49.1-18.7-67.9 0s-18.7 49.1 0 67.9s49.1 18.7 67.9 0zm0-294.2c18.7-18.7 18.7-49.1 0-67.9S93.7 56.2 75 75s-18.7 49.1 0 67.9s49.1 18.7 67.9 0zM369.1 437c18.7 18.7 49.1 18.7 67.9 0s18.7-49.1 0-67.9s-49.1-18.7-67.9 0s-18.7 49.1 0 67.9z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (variant - secondary) component - render 1`] = `
<button
  className="sc-dkjKgF cUknzn"
  onClick={[Function]}
  variant="secondary"
/>
`;

exports[`<Button /> SNAPSHOTS: UI - Button (variant - submit) component - render 1`] = `
<button
  className="sc-dkjKgF juvyuC"
  onClick={[Function]}
  variant="submit"
/>
`;

exports[`<Button /> SNAPSHOTS: UI - Button component - render 1`] = `
<button
  className="sc-dkjKgF fywBev"
  onClick={[Function]}
  variant="primary"
/>
`;
